--- a/style.css
+++ b/style.css
@@ -23,8 +23,8 @@
 }
 
 body {
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     overflow: hidden;
 }
 
@@ -58,17 +58,39 @@ footer {
 
 footer img {
     margin-left: 0.2vw;
-    margin-top: 0.2vh;
+    margin-top: 0.4vh;
     width: 1.5vw;
     height: auto;
     cursor: pointer;
+    border-radius: 50%;
     transition: all 0.1s ease-in-out;
 }
 
 footer img:hover {
     transform: scale(1.2);
     border: 1px solid rgba(0,0,0,0.6);
-    border-radius: 50%;
+}
+
+.active {
+    opacity: 1;
+    pointer-events: all;
+}
+
+.inactive {
+    opacity: 0;
+    pointer-events: none;
+}
+
+.et-svg{
+    width: 100px;
+}
+
+.robot-svg{
+    position: fixed;
+    display: inline-block;
+    mask: url(./images/robot.svg);
+    width: 100px;
+    height: 100px;
 }
 
 
