--- a/style.css
+++ b/style.css
@@ -39,9 +39,28 @@ main {
 }
 
 .menu {
-    width: 30%;
+    width: 50%;
     height: 50%;
     background-color: orange;
+    display: flex;
+    align-items: center;
+    padding: 0;
+    justify-content: space-between;
+}
+
+.menu .right-side,
+.menu .left-side {
+    display: inherit;
+    flex-direction: column;
+    gap: 10vh;
+    background-color: red;
+}
+
+
+
+.menu button {
+    width: 10vw;
+    height: 10vh;
 }
 
 footer {
@@ -81,16 +100,22 @@ footer img:hover {
     pointer-events: none;
 }
 
-.et-svg{
-    width: 100px;
+.icon{
+    width: 200px;
+    height: 200px;
+    
 }
 
-.robot-svg{
-    position: fixed;
-    display: inline-block;
-    mask: url(./images/robot.svg);
-    width: 100px;
-    height: 100px;
+.left {
+    position: absolute;
+    left: 25%;
+    bottom: 50%;
+    transform: translateX(-400px);
 }
 
-
+.right {
+    position: absolute;
+    right: 25%;
+    bottom: 50%;
+    transform: translateX(400px);
+}
