--- a/style.css
+++ b/style.css
@@ -57,29 +57,50 @@ main {
     border-radius: 15px;
     padding: 2vh 3vh;
     pointer-events: none;
+    opacity: 0;
 }
 
+.ttt-text.animate {
+    animation: fade-in 2s linear,
+    fade-out 2s 6s linear;
+}
 
 
 .ttt-text span  {
     font-family: 'Orbitron', sans-serif;
     font-size: 4.5rem;
     font-weight: 600;
+    opacity: 0.4;
 }
 
 .ttt-text span:not(:nth-child(1)):before {
     content: '-';
 }
 
+.ttt-text.animate span:nth-child(1){
+    animation: bubble 1.5s forwards;
+    animation-delay: 1000ms;
+}
 
-@keyframes shake {
+
+.ttt-text.animate span:nth-child(2){
+    animation: bubble 1.5s forwards;
+    animation-delay: 3000ms;
+}
 
 
-    25% { transform: translate(10px)}
-    50% { transform: translate(-10px)}
-    75% { transform: translate(10px)}
-    100% { transform: translate(-10px)}
+.ttt-text.animate span:nth-child(3){
+    animation: bubble 1.5s forwards;
+    animation-delay: 5000ms;
+}
 
+
+@keyframes bubble {
+
+
+    0% {transform: scale(1); opacity:0.4;}
+    50% {transform:scale(1.2);opacity:1;}
+    100% {transform: scale(1);opacity:1}
 
 }
 
