--- a/style.css
+++ b/style.css
@@ -183,8 +183,11 @@ main {
 }
 
 .menu .start-btn:active {
-    background-color: rgba(0,0,0,0.6);
     transform: scale(0.95);
+    animation: none;
+}
+
+.menu .start-btn.checked {
     animation: none;
 }
 
@@ -234,7 +237,7 @@ footer img:hover {
 }
 
 .icon-wrapper {
-    transition: all 300ms ease-in-out;
+    transition: all 1000ms ease-in-out;
 }
 
 .icon-wrapper .text {
@@ -243,30 +246,84 @@ footer img:hover {
     top: 35%;
     font-size: 6rem;
     font-weight: 400;
-    background-color: white;
+    background-color: rgba(114, 113, 113, 0.656);
     border: 1px solid black;
     border-radius: 20%;
+    color: rgba(0,0,0,0.8);
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
 
 .icon{
-    width: 30vw;
-    height: 30vh;
-    
+    width: 50vw;
+    height: 50vh;
+    transition: all 2000ms ease-in-out;
+}
+
+.icon.active {
+    transform: translateX(0);
 }
 
 .left {
     position: absolute;
-    left: 25%;
-    bottom: 35%;
-    transform: translateX(-20vw);
+    left: 0%;
+    bottom: 25%;
+    transform: translateX(-40vw);
 }
 
 .right {
     position: absolute;
-    right: 25%;
-    bottom: 35%;
-    transform: translateX(20vw);
+    right: 0%;
+    bottom: 25%;
+    transform: translateX(+40vw);
 }
+
+
+.display {
+    position:absolute;
+    width: 50%;
+    height: 15%;
+    top: 5%;
+    left: 25%;
+    background-color: rgba(255,255,255,0.4);
+    border: 1px solid black;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    transition: all 200ms ease-in-out;
+    box-shadow: rgba(0, 0, 0, 0.45) 0px 25px 20px -20px;
+}
+.board {
+    display: grid;
+    aspect-ratio: 1/1;
+    width: 30%;
+    height: auto;
+    position: absolute;
+    left: 35%;
+    top: 25%;
+    gap: 1%;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    background-color: black;
+    padding: 0.5%;
+    box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
+}
+
+.cell {
+    cursor: pointer;
+    background-color: orange;
+    transition: transform 200ms ease-in-out;
+}
+
+
+.cell:hover {
+    transform: scale(1.02)
+}
+
+
+
+
+
 
 
 @keyframes bubble {
