--- a/style.css
+++ b/style.css
@@ -330,6 +330,10 @@ footer img:hover {
     background-color: rgba(255,255,255,0.2);
     border-top-left-radius: 15%;
     border-top-right-radius: 15%;
+    border: 1px solid rgba(0,0,0,0.3);
+    box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
+
+
 }
 
 .display .losses {
@@ -337,6 +341,11 @@ footer img:hover {
     background-color: rgba(255,255,255,0.2);
     border-bottom-left-radius: 15%;
     border-bottom-right-radius: 15%;
+    border: 1px solid rgba(0,0,0,0.3);
+    border-top: none;
+    padding-top: 2%;
+    box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
+
 }
 
 .display .text {
@@ -455,6 +464,14 @@ footer img:hover {
 }
 
 
+.cell.animate {
+    background-color: red;
+    animation-duration: 3s;
+    animation-name: winner;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;}
+
+
 
 .cell:hover {
     transform: scale(1.03)
@@ -478,6 +495,18 @@ footer img:hover {
 .cell.robot.green {
     animation: robotGreen 600ms;
     animation-fill-mode: forwards;
+}
+
+@keyframes winner {
+    0% {
+        transform: scale(1);
+    }
+    50% {
+        transform: scale(1.5);
+    }    
+    100% {
+        transform: scale(2);
+    }
 }
 
 @keyframes playerRed {
